--- a/RottenMangoes/Base.lproj/Main.storyboard
+++ b/RottenMangoes/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="321" height="391"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4tR-F9-U9L">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4tR-F9-U9L">
                                                     <rect key="frame" x="0.0" y="0.0" width="321" height="391"/>
                                                 </imageView>
                                             </subviews>
@@ -153,23 +153,39 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vv2-pp-zXy">
+                                <rect key="frame" x="236" y="490" width="129" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Show Theatre Map">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="lev-Hf-dYa" kind="show" id="p18-fF-Mct"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="oiK-S3-cqK" firstAttribute="top" secondItem="lbc-F3-TPr" secondAttribute="bottom" constant="10" id="1KP-Q8-1qg"/>
                             <constraint firstAttribute="trailing" secondItem="nZ4-hj-n5O" secondAttribute="trailing" constant="20" id="4b7-ht-cK7"/>
+                            <constraint firstAttribute="trailing" secondItem="Vv2-pp-zXy" secondAttribute="trailing" constant="235" id="6aL-Xg-83M"/>
                             <constraint firstItem="ZVu-r5-lRU" firstAttribute="top" secondItem="f6e-PG-DUG" secondAttribute="bottom" constant="8" id="AB6-Qn-NTr"/>
                             <constraint firstItem="VNA-lD-6JD" firstAttribute="leading" secondItem="9Lp-Fg-XNw" secondAttribute="trailing" constant="20" id="AQS-Fx-He5"/>
                             <constraint firstItem="9Lp-Fg-XNw" firstAttribute="leading" secondItem="oiK-S3-cqK" secondAttribute="trailing" constant="20" id="CDO-5x-jMU"/>
                             <constraint firstItem="nZ4-hj-n5O" firstAttribute="top" secondItem="VNA-lD-6JD" secondAttribute="bottom" constant="8" id="CNd-Ck-TEh"/>
+                            <constraint firstItem="dKR-XK-K8T" firstAttribute="top" secondItem="Vv2-pp-zXy" secondAttribute="bottom" constant="20" id="DSO-Z3-HAa"/>
                             <constraint firstItem="f6e-PG-DUG" firstAttribute="leading" secondItem="Grd-7h-Ung" secondAttribute="leading" constant="20" id="HOa-zM-GYW"/>
+                            <constraint firstItem="Vv2-pp-zXy" firstAttribute="centerX" secondItem="Grd-7h-Ung" secondAttribute="centerX" id="HQE-nM-rhm"/>
                             <constraint firstItem="VNA-lD-6JD" firstAttribute="leading" secondItem="9Lp-Fg-XNw" secondAttribute="trailing" constant="20" id="Hxj-ZV-O1c"/>
                             <constraint firstItem="9Lp-Fg-XNw" firstAttribute="leading" secondItem="oiK-S3-cqK" secondAttribute="trailing" constant="20" id="JUd-1K-Oh6"/>
                             <constraint firstItem="9aE-yt-Ed3" firstAttribute="top" secondItem="lbc-F3-TPr" secondAttribute="bottom" constant="10" id="LoF-iK-7b7"/>
                             <constraint firstItem="VNA-lD-6JD" firstAttribute="top" secondItem="lbc-F3-TPr" secondAttribute="bottom" constant="10" id="OYj-aB-pod"/>
+                            <constraint firstItem="Vv2-pp-zXy" firstAttribute="top" secondItem="ZVu-r5-lRU" secondAttribute="bottom" constant="42" id="P52-Y4-4su"/>
                             <constraint firstItem="ZVu-r5-lRU" firstAttribute="centerX" secondItem="Grd-7h-Ung" secondAttribute="centerX" id="QYU-oG-AfY"/>
-                            <constraint firstItem="9aE-yt-Ed3" firstAttribute="leading" secondItem="VNA-lD-6JD" secondAttribute="trailing" id="RJT-c1-MiM"/>
+                            <constraint firstItem="9aE-yt-Ed3" firstAttribute="leading" secondItem="VNA-lD-6JD" secondAttribute="trailing" constant="5" id="RJT-c1-MiM"/>
                             <constraint firstItem="Ucc-A7-48X" firstAttribute="leading" secondItem="Grd-7h-Ung" secondAttribute="leading" constant="20" id="ROg-sc-Q9C"/>
+                            <constraint firstItem="Vv2-pp-zXy" firstAttribute="leading" secondItem="Grd-7h-Ung" secondAttribute="leading" constant="236" id="SMZ-o0-bgC"/>
                             <constraint firstItem="ZVu-r5-lRU" firstAttribute="leading" secondItem="Grd-7h-Ung" secondAttribute="leading" constant="20" id="SPJ-9w-i6t"/>
                             <constraint firstItem="oiK-S3-cqK" firstAttribute="leading" secondItem="Grd-7h-Ung" secondAttribute="leading" constant="20" id="XjK-pA-0On"/>
                             <constraint firstItem="lbc-F3-TPr" firstAttribute="top" secondItem="YTI-0M-qrY" secondAttribute="bottom" constant="8" id="Z6F-cy-tLI"/>
@@ -181,9 +197,13 @@
                             <constraint firstAttribute="leadingMargin" secondItem="oiK-S3-cqK" secondAttribute="leading" id="h1u-qT-WaC"/>
                             <constraint firstItem="nZ4-hj-n5O" firstAttribute="centerX" secondItem="Grd-7h-Ung" secondAttribute="centerX" id="h3S-tc-aY9"/>
                             <constraint firstItem="f6e-PG-DUG" firstAttribute="centerX" secondItem="Grd-7h-Ung" secondAttribute="centerX" id="hEj-ah-TOf"/>
+                            <constraint firstAttribute="trailing" secondItem="Vv2-pp-zXy" secondAttribute="trailing" constant="235" id="iWS-bX-Pby"/>
+                            <constraint firstItem="dKR-XK-K8T" firstAttribute="top" secondItem="Vv2-pp-zXy" secondAttribute="bottom" constant="80" id="kC3-Zw-SAt"/>
                             <constraint firstItem="Ucc-A7-48X" firstAttribute="top" secondItem="nZ4-hj-n5O" secondAttribute="bottom" constant="8" id="oIi-EN-ydx"/>
+                            <constraint firstItem="Vv2-pp-zXy" firstAttribute="centerX" secondItem="Grd-7h-Ung" secondAttribute="centerX" id="og0-Un-i88"/>
                             <constraint firstAttribute="trailing" secondItem="lbc-F3-TPr" secondAttribute="trailing" constant="20" id="p7b-Hq-vMx"/>
                             <constraint firstItem="nZ4-hj-n5O" firstAttribute="leading" secondItem="Grd-7h-Ung" secondAttribute="leading" constant="20" id="paj-SU-176"/>
+                            <constraint firstItem="Vv2-pp-zXy" firstAttribute="leading" secondItem="Grd-7h-Ung" secondAttribute="leading" constant="236" id="qvj-M6-gFW"/>
                             <constraint firstItem="9Lp-Fg-XNw" firstAttribute="top" secondItem="lbc-F3-TPr" secondAttribute="bottom" constant="10" id="xoz-sm-u2i"/>
                             <constraint firstAttribute="trailing" secondItem="f6e-PG-DUG" secondAttribute="trailing" constant="20" id="yxE-bd-mTg"/>
                             <constraint firstItem="f6e-PG-DUG" firstAttribute="top" secondItem="Ucc-A7-48X" secondAttribute="bottom" constant="8" id="zAp-Ox-rdR"/>
@@ -191,6 +211,13 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="XjK-pA-0On"/>
+                                <exclude reference="6aL-Xg-83M"/>
+                                <exclude reference="P52-Y4-4su"/>
+                                <exclude reference="SMZ-o0-bgC"/>
+                                <exclude reference="iWS-bX-Pby"/>
+                                <exclude reference="og0-Un-i88"/>
+                                <exclude reference="qvj-M6-gFW"/>
+                                <exclude reference="DSO-Z3-HAa"/>
                             </mask>
                         </variation>
                     </view>
@@ -208,6 +235,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lz0-KU-CUU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1802" y="305"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="Cqm-Su-hIq">
+            <objects>
+                <viewController id="lev-Hf-dYa" customClass="MapViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dOL-IC-ySw"/>
+                        <viewControllerLayoutGuide type="bottom" id="hSU-eU-Ftz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="F8B-6a-Gf7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4hv-55-O3P">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="4hv-55-O3P" secondAttribute="trailing" id="1nE-za-11U"/>
+                            <constraint firstItem="4hv-55-O3P" firstAttribute="leading" secondItem="F8B-6a-Gf7" secondAttribute="leading" id="VHT-SW-k9f"/>
+                            <constraint firstItem="4hv-55-O3P" firstAttribute="bottom" secondItem="hSU-eU-Ftz" secondAttribute="top" id="qEb-vE-txx"/>
+                            <constraint firstItem="4hv-55-O3P" firstAttribute="top" secondItem="dOL-IC-ySw" secondAttribute="bottom" id="vzE-RP-Hbx"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="4hv-55-O3P" id="qtQ-82-NmP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bzn-G9-d1c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2504" y="305"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aIQ-DO-zTQ">
